--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -48,21 +48,27 @@
         android:layout_marginTop="200dp"
         android:src="@mipmap/romashka_launcher_foreground" />
 
-    <Button
-        android:id="@+id/button_repeat"
-        android:layout_width="150dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginStart="140dp"
         android:layout_marginTop="500dp"
-        android:text="@string/repeat"
-        app:cornerRadius="60sp" />
+        android:gravity="center"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/button_menu"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="570dp"
-        android:text="@string/menu"
-        app:cornerRadius="60sp" />
+        <Button
+            android:id="@+id/button_repeat"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="20dp"
+            android:text="@string/repeat"
+            app:cornerRadius="60sp" />
+
+        <Button
+            android:id="@+id/button_menu"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="30dp"
+            android:text="@string/menu"
+            app:cornerRadius="60sp" />
+    </LinearLayout>
 </RelativeLayout>
